# HelloOpenGL

./: README.md
basic/: CMakeLists.txt  get_screen.cpp
basic/geometric/circle/: CMakeLists.txt  README.md  main-1.cpp  main-2.cpp  run.sh  shader.cpp  shader.hpp
basic/geometric/circle/shaders/: shader-1.frag  shader-1.vert  shader-2.frag  shader-2.vert
basic/only-vbo/: CMakeLists.txt  README.md  main.cpp  run.sh
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw/.cache/clangd/index/: allocator.c.E3085044469EB61F.idx  boing.c.CB607F0CC53CF0A4.idx  clipboard.c.BEEC4E9E05E30ABE.idx  context.c.EF621E7E85A72FEA.idx  cursor.c.63B7040F45AB2696.idx  egl_context.c.C103805FCC26D123.idx  empty.c.DFA5187786D9F783.idx  events.c.7CE93A6BCD39ECEC.idx  gamma.c.91DEF9AD92DCFB9F.idx  gears.c.C8AC9FF20E7ED957.idx  getopt.c.D41E11F65C4B0DDF.idx  getopt.h.C578C94CBA19DAEE.idx  gl.h.04C1BE58DA74F786.idx  gles2.h.0A543DB203546B5C.idx  glfw3.h.8B4175011BB1D9AF.idx  glfwinfo.c.D13EC9FE7EC4C1BE.idx  glx_context.c.5BBF30F4B385C5C7.idx  heightmap.c.D31514B990A83855.idx  icon.c.0AF7924FCBBC8FE4.idx  iconify.c.74107BFFFF52B4F3.idx  init.c.07525774D44B6CFD.idx  input.c.046FA8B41B7E5246.idx  inputlag.c.8B5D2570FD29B70A.idx  internal.h.C3C4156D40E5844B.idx  joysticks.c.9644704C871C4498.idx  linmath.h.C63E95A828C11D2B.idx  linux_joystick.c.38517CBCF0483879.idx  linux_joystick.h.51F51F67E0E3AF93.idx  mappings.h.B018EC81C98F5946.idx  monitor.c.9D68CC7377F43EE0.idx  monitors.c.A3E6F4B69354A031.idx  msaa.c.C45420E2F478A8D4.idx  nuklear.h.BEA22AF3C62F3DA5.idx  (+44 more)
